# 05-dremlet

./: .gitignore
02 dreamlet-cli/: .gitignore  CLI_README.md  Home.py  README.md  communication.md  config.json  config.yaml  dreamlet.py  fix_folder_structure.py  optimize_kokoro.py  pyproject.toml  run.txt  thermal_monitor.py  thermal_monitor_nosudo.py  thermal_safe_tts.py  thermal_safe_tts_nosudo.py
02 dreamlet-cli/cli/: __init__.py  batch.py  config.py  progress.py  reports.py  utils.py
02 dreamlet-cli/config/: 06 Generate 4K Images.toml  07 Generate Audio with Kokoro.toml  10 Render MP4 Videos.toml  install.sh
02 dreamlet-cli/docs/: parity-catalog.md
02 dreamlet-cli/pages/: 02_Rename.py  03_Save_Text.py  04_Remove_unwanted.py  05_Move_Slides.py  06_4K_Image_pptx_zip.py  07_TTS_Kokoro.py  08_Ollama.py  08_Translator_LM_Studio.py  09_Count_new.py  10_mp4_GPU.py  11_Verify_mp4.py  12_Delete.py  13_Delete_folder.py  14_restore_pptx.py
02 dreamlet-cli/reports/: 02_rename_files.md  03_save_text.md  04_remove_unwanted.md  05_move_slides.md  06_4k_image_processing.md  07_tts_kokoro_processing.md  09_count_&_validate_files.md  09_count_and_validate_files.md  10_mp4_gpu_video_generation.md  11_mp4_verification.md  14_restore_files.md  batch_batch_processing.md
02 dreamlet-cli/src/: 06 Generate 4K Images.py  07 Generate Audio with Kokoro.py  10 Render MP4 Videos.py
02 dreamlet-cli/tests/: conftest.py  test_4k_workflow.py  test_catalog.py  test_cli_help.py  test_config.py  test_kokoro_workflow.py  test_mp4_workflow.py  test_pages_compile.py  test_requested_layout.py  test_sample_configs.py  test_smoke_commands.py  test_structure.py
99 dreamlet-edu-video 2/: CLEAN_STRUCTURE.md  app.py  pyproject.toml  setup.py
99 dreamlet-edu-video 2/config/: mp4_verification.json
99 dreamlet-edu-video 2/deployment_system/: .dockerignore  Dockerfile  README.md  USER_INSTRUCTIONS.md  license_validator.py
99 dreamlet-edu-video 2/pages/: 00_File_Manager.py  01_Rename.py  03_Save_Text.py  04_Remove_unwanted.py  05_Move_Slides.py  06_4K_Image.py  08_Ollama.py  08_Translator_LM_Studio.py  12_Delete.py  13_Delete_folder.py  14_restore_pptx.py  51_Adjust_Slide_Files_Only.py  57_TTS_Kokoro_GPU_old.py  59_count_old.py  60_mp4_CPU.py
99 dreamlet-edu-video 2/utils/: file_operations.py  image_processing.py  multi_method_converter.py  pdf_image_converter.py  streamlit_sidebar.py  text_processing.py
99 dreamlet-edu-video 3/: .eslintrc.js  .gitignore  02_Adjust_AAA_EEE_standalone.py  CODING_CONVENTIONS.md  README.md  UX_ENHANCEMENTS_IMPLEMENTATION_SUMMARY.md  WORKFLOW_EXECUTION_ENHANCEMENT.md  app.py  package.json  pyproject.toml  requirements.txt  user-experience-enhancements-requirements.json
99 dreamlet-edu-video 3/attached_assets/: 1 basic.py  2 Generate_slide_text.py  2025-04-09T20-40_export.csv  3 multiple voices.py  3 pptx_to_png.py  4 personalise_png.py  Lecto_documentation.txt  Pasted--Lecto-Translation-to-Spanish-This-tool-translates-English-text-files-to-Spanish-using-the-Lecto-API-1746553002200.txt  Pasted-17-TTS-Local-Advanced-Convert-transcript-sections-to-audio-files-using-local-Kokoro-Text-to-Speec-1746346211808.txt  Pasted-17-TTS-Local-Advanced-Convert-transcript-sections-to-audio-files-using-local-Kokoro-Text-to-Speec-1746346531024.txt  Pasted-20-Delete-Lecture-Files-Delete-all-files-and-directories-related-to-specific-lectures-WARNING--1746522839302.txt  Pasted-2025-04-14-15-31-25-2025-04-14-10-01-25-664-INFO-main-download-model-60-Model-files-al-1744653654190.txt  Pasted-API-Key-Case-sensitive-Value-of-the-X-API-Key-header-P66PARQ-MH44AC6-HNA9BE2-25YRH37-Rotate-AP-1746547632395.txt  Pasted-Based-on-my-analysis-of-the-existing-codebase-and-renaming-patterns-here-s-my-comprehensive-assessm-1749133822252_1749133822252.txt  Pasted-Based-on-the-requirements-document-I-ll-provide-additional-requirements-for-the-Adjust-page-Page-1744228929225.txt  Pasted-Final-File-Renaming-Analysis-Table-Image-Current-Filename-Recommended-New-Name-Reasoning-Action-Imag-1749134979960_1749134979961.txt  Pasted-Full-Logic-Specification-Rename-Page-Move-Page-Save-Text-Page-This-update-introduces-additional-r-1744977993827.txt  Pasted-Here-are-the-key-changes-needed-to-migrate-your-LM-Studio-configuration-to-Ollama-while-maintaining--1747246570782.txt  Pasted-Now-see-the-first-screenshot-Why-is-it-showing-multi-language-and-single-language-It-should-all-be-1746776695716.txt  Pasted-Overview-Welcome-to-your-Free-Trial-To-start-translating-text-simply-copy-your-API-Key-and-paste-i-1746426921906.txt  Pasted-Page-06-4K-Image-6-6-1-Purpose-To-generate-high-resolution-4K-3840x2160-images-from-presentation--1744236732573.txt  Pasted-Processing-15-Generative-AI-for-Beginners-in-2025-Lecture-01-Debug-Sending-3-texts-for-translat-1746548023036.txt  (+25 more)
(+255 files in other folders)
