[project]
name = "dreamlet-cli"
version = "0.1.0"
description = "CLI-only clone of the Dreamlet educational video workflow"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "python-pptx>=1.0.2",
    "pdf2image>=1.17.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
dreamlet = "dreamlet_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
